--- a/JPL_Mars_Space_Images .ipynb
+++ b/JPL_Mars_Space_Images .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,24 +42,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA24241-640x350.jpg\n"
+      "https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA23446-1920x1200.jpg\n"
      ]
     }
    ],
    "source": [
-    "image_all = soup.find_all('div', class_='img')\n",
-    "image = soup.find('div', class_='img')\n",
-    "image2 = image.img['src']\n",
-    "featured_image = \"https://www.jpl.nasa.gov\" + image2\n",
-    "\n",
-    "print(featured_image)\n"
+    "images = soup.find('article', class_='carousel_item')['style']\n",
+    "featured = images.split(\"'\")\n",
+    "featured[1]\n",
+    "featured_image = \"https://www.jpl.nasa.gov\" + featured[1]\n",
+    "print(featured_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
