--- a/NASA_Mars_News.ipynb
+++ b/NASA_Mars_News.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,41 +22,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = \"https://mars.nasa.gov/news/\"\n",
-    "browser.visit(url)"
+    "browser.visit(url)\n",
+    "\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, \"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Mars Now\n",
-      "Sometimes half measures can be a good thing – especially on a journey this long. The agency's latest rover only has about 146 million miles left to reach its destination.\n"
+      "Mars Now\nNASA released an independent review report Tuesday indicating the agency is well positioned for its Mars Sample Return campaign to bring pristine samples from Mars to Earth for scientific study.\n"
      ]
     }
    ],
    "source": [
-    "html = browser.html\n",
-    "soup = BeautifulSoup(html, \"html.parser\")\n",
-    "    \n",
-    "title = soup.find(\"div\", class_=\"content_title\").text\n",
-    "text = soup.find(\"div\", class_=\"article_teaser_body\").text\n",
-    "print(title)\n",
-    "print(text)"
+    "title = soup.find(\"div\", class_=\"content_title\")\n",
+    "text = soup.find(\"div\", class_=\"article_teaser_body\")\n",
+    "header = soup.find(\"div\", class_=\"content_title\").text\n",
+    "para = soup.find(\"div\", class_=\"article_teaser_body\").text\n",
+    "print(header)\n",
+    "print(para)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " [42]:\n",
+    "# scrape the article header \n",
+    "news_title = first_article.find('div', class_='content_title').text\n",
+    "\n",
+    "# scrape the article paragraph\n",
+    "news_p = first_article.find('div', class_='article_teaser_body').text\n",
+    "\n",
+    "print(news_title)\n",
+    "print(news_p)\n",
+    "\n",
+    "\n",
+    "# Use this line if you want to find all the headlines\n",
+    "results = soup.find_all('div', class_='list_text')\n",
+    "\n",
+    "# Use this line if you want to find just the first headline\n",
+    "first_article = soup.find('div', class_='list_text')\n",
+    "print(first_article)"
+   ]
   }
  ],
  "metadata": {
@@ -87,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.7-final"
   }
  },
  "nbformat": 4,
